# rust_wasm_code_generator

./: Cargo.toml  build_script.bat
sample_html/: index.html  index.js
src/: constant.rs  curl_handler.rs  golang_generator.rs  lib.rs  main.rs  nodejs_generator.rs  python_generator.rs  rust_generator.rs
